# filewatch

./: .gitignore  CMakeLists.txt  Changes.md  LICENSE  Makefile  README.md  build.sh  fswait.c  fswait.h
src/: fswait.h  main.c
